# cookiecutter-python-poetry-lambda-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: lambda_function.py
